--- a/index.html
+++ b/index.html
@@ -4,11 +4,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Login Form</title>
 </head>
 <body>
-  <div class="page">
- 
+  
+  <div class="login-page">
+    <div class="page">
+      <div class="logo">
+        <h1>Login</h1>
+      </div>
+  
+      <div class="form">
+        <form action="">
+          <div class="username">
+           <label for="username">Username:</label>
+           <div class="input-group flex-nowrap">
+             <span class="input-group-text username" id="addon-wrapping"><i class="fa-regular fa-user"></i></span>
+             <input type="text" class="form-control username" id="username" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+           </div>
+          </div>
+          <br>
+          <div class="password">
+            <label for="password">Password:</label>
+            <div class="input-group flex-nowrap">
+              <span class="input-group-text username" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
+              <input type="password" class="form-control username" id="password" placeholder="Password" aria-label="Username" aria-describedby="addon-wrapping">
+            </div>
+           </div>
+
+           <div class="forgotPassword">
+            <a href="#">Forgot Password?</a>
+           </div>
+
+           <div class="d-grid gap-2 login-btn">
+            <button class="btn btn-primary" type="button">Login</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="social-media">
+        <p>or signup using</p>
+        <div class="icons">
+          <div class="facebook s-icon">
+            <i class="fa-brands fa-facebook-f"></i>
+          </div>
+          <div class="youtube s-icon">
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+          <div class="X s-icon">
+            <i class="fa-brands fa-x-twitter"></i>
+          </div>
+        </div>
+
+        <div class="signup">
+          <p>Or sigunp using</p>
+          <a href="#">Signup</a>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
