--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            </div>
 
            <div class="forgotPassword">
-            <a href="#">Forgot Password?</a>
+            <a href="#" class="F-p">Forgot Password?</a>
            </div>
 
            <div class="d-grid gap-2 login-btn">
@@ -63,7 +63,7 @@
 
         <div class="signup">
           <p>Or sigunp using</p>
-          <a href="#">Signup</a>
+          <a href="#" class="anchor">Signup</a>
         </div>
       </div>
     </div>
